syntax = "proto3";

option csharp_namespace = "MireaCore.Services";

package mireac;

service MireaCore {
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserByEmail(GetUserRequest) returns (GetUserResponse);
  rpc GetUsers(GetUserRequest) returns (GetUsersResponse);
  rpc GetGroups(GetGroupsRequest) returns (GetGroupsResponse);
}
message GetGroupsRequest{}
message GetGroupsResponse{
  repeated Group groups = 1;
}
message Group{
  string groupName=1;
  repeated GetUserResponse users=2;
}
message GetUsersRequest{}
message GetUsersResponse{
  repeated GetUserResponse users =1;
}
message GetUserRequest{
  string email=1;
}
message GetUserResponse{
  string firstName=1;
  string secondName=2;
  string email=3;
  string studyGroup=4;
}
message SignInRequest{
  string email=1;
}
message SignInResponse{
  bool result=1;
  string error=2;
}